_sass/components/homepage/_announcements.scss
.announcements-max-width {
  max-width: $container-max-width;
}

.announcements-divider {
  height: 1px;
  color: #f9f9f9;
}

.announcements-announcement-title {
  font-size: 1.625rem;
  font-weight: 700;
  line-height: 2rem;
}

.announcements-announcement-subtitle {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.375rem;
}

.announcements-announcement-link {
  color: $secondary-color;
  font-size: 1.125rem;
  font-weight: 600;
  line-height: 1.5rem;
  letter-spacing: 0.27px;
  text-decoration-line: underline;
  text-transform: capitalize;
  text-underline-offset: 0.25rem;
}

.announcements-announcement-link:hover {
  color: $secondary-color-hover;
}

a[target="_blank"].announcements-announcement-link::after {
  content: unset;
}

